@@ -1,3 +1,10 @@
+2009-04-28  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/39930
+	PR fortran/39931
+	* gfortran.dg/ambiguous_reference_2.f90: New.
+	* gfortran.dg/pointer_assign_7.f90: New.
+
 2009-04-28  Nathan Froyd  <froydnj@codesourcery.com>
 	    Mark Mitchell  <mark@codesourcery.com>
 
