@@ -1,3 +1,11 @@
+2009-04-28  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/39930
+	PR fortran/39931
+	* expr.c (gfc_check_pointer_assign): Correctly detect if the left hand
+	side is a pointer.
+	* parse.c (gfc_fixup_sibling_symbols): Don't check for ambiguity.
+
 2009-04-28  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/39879
